# Astar

./: .prettierignore  .prettierrc  docker-compose.yml  package-lock.json  package.json
backend/: CMakeLists.txt  Dockerfile  main.cpp
backend/src/: main.cpp
frontend/: vite.config.js
frontend/public/: maplibre-gl.css
frontend/src/components/: map.jsx
src/: App.jsx
src/components/: map.jsx
src/utils/: api.jsx  helpers.jsx
